[FIX] Layout issues

--- a/src/style/profile.scss
+++ b/src/style/profile.scss
@@ -16,16 +16,20 @@
     justify-content: center;
 }
 
-#bio-container {
+#bio-container-profile {
     margin: 0;
+    width: 40%;
+    margin-top: 30px;
 }
 
 .photo-border {
+    width: 192px;
+    height: 192px;
     border: 1px solid #000000;
 }
 
 #profile-username {
-    margin-left: 10%;
+    margin-left: 20px;
     width: 100%;
 }
 
